[package]
name = "excel-utils"
version = "0.13.0"
authors = ["Pablo Deymonnaz <deymonnaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
calamine = "0.18.0"
chrono = { version = "0.4.19", features = ["serde"] }
# bigdecimal crate version must match the one used by diesel
bigdecimal = { version = "0.1.2", features = ["serde"] }

xlsxwriter = { version = "0.3.2", optional = true  }

[features]
enablewriter = ["xlsxwriter"]