[package]
name = "excel-utils"
version = "0.18.0"
authors = ["Pablo Deymonnaz <deymonnaz@gmail.com>"]
edition = "2018"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
calamine = "0.21.2"
chrono = { version = "0.4.19", features = ["serde"] }
# bigdecimal crate version must match the one used by diesel
bigdecimal = { version = "0.1.2", features = ["serde"] }

xlsxwriter = { version = "0.6", optional = true }

[features]
enablewriter = ["xlsxwriter"]

[dev-dependencies]
pretty_assertions = "1.0.0"
